--- a/create_vms.yml
+++ b/create_vms.yml
@@ -34,7 +34,7 @@
         net:
           net0: 'virtio,bridge={{ proxmox_bridge }},tag=77'
         ipconfig:
-          ipconfig0: 'ip={{ item.ip }}/24,gw=192.168.1.1'
+          ipconfig0: 'ip={{ item.ip }}/24,gw={{ gw }}'
         sshkeys: "{{ sshkey }}"
         ciuser: "{{ cloudinit_user }}"
         cipassword: "{{ cloudinit_password }}"
