--- a/cluster_init.yml
+++ b/cluster_init.yml
@@ -1,9 +1,6 @@
 ---
-- name: Remove k3s on all VMs
+- name: Cluster init
   hosts: k8s_master
   gather_facts: no
-
-  tasks:
-    - name: Join worker nodes to the cluster
-          command: "{{ hostvars['master']['kubeadm_output']['stdout_lines'][0] }}"
-          when: "'kubeadm join' in hostvars['master']['kubeadm_output']['stdout']"
+  roles:
+    - cluster_init
