--- a/install_kub.yml
+++ b/install_kub.yml
@@ -1,23 +1,13 @@
 ---
 - name: Install kubelet kubeadm kubectl
   hosts: k8s_master, k8s_master2
+  become: yes
   gather_facts: no
 
   vars_files:
     - vm_vars.yml
   
-  tasks:
-    - name: Install kubelet kubeadm kubectl
-      become: yes
-      ansible.builtin.script: ./kubectl_config.sh
-
-    - name: Set /etc/hosts
-      become: yes
-      ansible.builtin.blockinfile:
-        path: /etc/hosts
-        block: |
-          {{ hostvars[inventory_hostname].groups.k8s_master[0] }} k8s-1
-          {{ hostvars[inventory_hostname].groups.k8s_master2[0] }}  k8s-2
-          {{ hostvars[inventory_hostname].groups.proxy[0] }}  proxy
-
-              
+  roles:
+    - kub_install
+    - reboot_wait
+    - set_hosts
